--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
+strum = "0.27.1"
+strum_macros = "0.27.1"
