--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+num-derive = "0.4.2"
+num-traits = "0.2.19"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 strum = "0.27.1"
