--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
 strum = "0.27.1"
 strum_macros = "0.27.1"
+zerocopy = {version = "0.8.25", features = ["derive"]}
