Add extra Turnt environment for doing JSON -> flattened repr round trip

--- a/test/turnt.toml
+++ b/test/turnt.toml
@@ -1,2 +1,6 @@
 [envs.print]
 command = "bril2json < {filename} | cargo run"
+
+[envs.roundtrip]
+command = "bril2json < {filename} | cargo run | brili {args}"
+output.roundtrip = "-"
