--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = "4.5.37"
 memmap2 = "0.9.5"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
